--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
   <div id="main-box">
     <div>
+      <input id='small-display' type="text" readonly >
       <input placeholder="Enter  " type="text" id="display" readonly>
     </div>
 
